parser.automaton
State 0:
system' -> . system [ # ]
-- On SIZEPROC shift to state 1
-- On system shift to state 3
-- On size_proc shift to state 4
-- On VAR reduce production size_proc -> 
-- On UNSAFE reduce production size_proc -> 
-- On UNIVTRANSITION reduce production size_proc -> 
-- On TYPE reduce production size_proc -> 
-- On TREGEXP reduce production size_proc -> 
-- On TRANSITION reduce production size_proc -> 
-- On PREDICATE reduce production size_proc -> 
-- On METATRANSITION reduce production size_proc -> 
-- On INVARIANT reduce production size_proc -> 
-- On INIT reduce production size_proc -> 
-- On HIDETRANSITION reduce production size_proc -> 
-- On CONST reduce production size_proc -> 
-- On ARRAY reduce production size_proc -> 

State 1:
size_proc -> SIZEPROC . INT [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On INT shift to state 2

State 2:
size_proc -> SIZEPROC INT . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On VAR reduce production size_proc -> SIZEPROC INT 
-- On UNSAFE reduce production size_proc -> SIZEPROC INT 
-- On UNIVTRANSITION reduce production size_proc -> SIZEPROC INT 
-- On TYPE reduce production size_proc -> SIZEPROC INT 
-- On TREGEXP reduce production size_proc -> SIZEPROC INT 
-- On TRANSITION reduce production size_proc -> SIZEPROC INT 
-- On PREDICATE reduce production size_proc -> SIZEPROC INT 
-- On METATRANSITION reduce production size_proc -> SIZEPROC INT 
-- On INVARIANT reduce production size_proc -> SIZEPROC INT 
-- On INIT reduce production size_proc -> SIZEPROC INT 
-- On HIDETRANSITION reduce production size_proc -> SIZEPROC INT 
-- On CONST reduce production size_proc -> SIZEPROC INT 
-- On ARRAY reduce production size_proc -> SIZEPROC INT 

State 3:
system' -> system . [ # ]
-- On # accept system

State 4:
system -> size_proc . type_defs symbold_decls decl_list EOF [ # ]
-- On TYPE shift to state 5
-- On type_defs shift to state 16
-- On type_def_plus shift to state 304
-- On type_def shift to state 305
-- On VAR reduce production type_defs -> 
-- On UNSAFE reduce production type_defs -> 
-- On UNIVTRANSITION reduce production type_defs -> 
-- On TREGEXP reduce production type_defs -> 
-- On TRANSITION reduce production type_defs -> 
-- On PREDICATE reduce production type_defs -> 
-- On METATRANSITION reduce production type_defs -> 
-- On INVARIANT reduce production type_defs -> 
-- On INIT reduce production type_defs -> 
-- On HIDETRANSITION reduce production type_defs -> 
-- On CONST reduce production type_defs -> 
-- On ARRAY reduce production type_defs -> 

State 5:
type_def -> TYPE . lident [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
type_def -> TYPE . lident EQ constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
type_def -> TYPE . lident EQ BAR constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On LIDENT shift to state 6
-- On lident shift to state 7

State 6:
lident -> LIDENT . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION THEN RIGHTSQ RIGHTPAR RIGHTBR PV PREDICATE PLUS OR NEQ MINUS MIDENT METATRANSITION LT LIDENT LEFTPAR LE INVARIANT INIT IMP HIDETRANSITION GT GE EQUIV EQ ELSE DOT CONST COMMA COLON BAR ARRAY AND ]
-- On VAR reduce production lident -> LIDENT 
-- On UNSAFE reduce production lident -> LIDENT 
-- On UNIVTRANSITION reduce production lident -> LIDENT 
-- On TYPE reduce production lident -> LIDENT 
-- On TREGEXP reduce production lident -> LIDENT 
-- On TRANSITION reduce production lident -> LIDENT 
-- On THEN reduce production lident -> LIDENT 
-- On RIGHTSQ reduce production lident -> LIDENT 
-- On RIGHTPAR reduce production lident -> LIDENT 
-- On RIGHTBR reduce production lident -> LIDENT 
-- On PV reduce production lident -> LIDENT 
-- On PREDICATE reduce production lident -> LIDENT 
-- On PLUS reduce production lident -> LIDENT 
-- On OR reduce production lident -> LIDENT 
-- On NEQ reduce production lident -> LIDENT 
-- On MINUS reduce production lident -> LIDENT 
-- On MIDENT reduce production lident -> LIDENT 
-- On METATRANSITION reduce production lident -> LIDENT 
-- On LT reduce production lident -> LIDENT 
-- On LIDENT reduce production lident -> LIDENT 
-- On LEFTPAR reduce production lident -> LIDENT 
-- On LE reduce production lident -> LIDENT 
-- On INVARIANT reduce production lident -> LIDENT 
-- On INIT reduce production lident -> LIDENT 
-- On IMP reduce production lident -> LIDENT 
-- On HIDETRANSITION reduce production lident -> LIDENT 
-- On GT reduce production lident -> LIDENT 
-- On GE reduce production lident -> LIDENT 
-- On EQUIV reduce production lident -> LIDENT 
-- On EQ reduce production lident -> LIDENT 
-- On ELSE reduce production lident -> LIDENT 
-- On DOT reduce production lident -> LIDENT 
-- On CONST reduce production lident -> LIDENT 
-- On COMMA reduce production lident -> LIDENT 
-- On COLON reduce production lident -> LIDENT 
-- On BAR reduce production lident -> LIDENT 
-- On ARRAY reduce production lident -> LIDENT 
-- On AND reduce production lident -> LIDENT 

State 7:
type_def -> TYPE lident . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
type_def -> TYPE lident . EQ constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
type_def -> TYPE lident . EQ BAR constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On EQ shift to state 8
-- On VAR reduce production type_def -> TYPE lident 
-- On UNSAFE reduce production type_def -> TYPE lident 
-- On UNIVTRANSITION reduce production type_def -> TYPE lident 
-- On TYPE reduce production type_def -> TYPE lident 
-- On TREGEXP reduce production type_def -> TYPE lident 
-- On TRANSITION reduce production type_def -> TYPE lident 
-- On PREDICATE reduce production type_def -> TYPE lident 
-- On METATRANSITION reduce production type_def -> TYPE lident 
-- On INVARIANT reduce production type_def -> TYPE lident 
-- On INIT reduce production type_def -> TYPE lident 
-- On HIDETRANSITION reduce production type_def -> TYPE lident 
-- On CONST reduce production type_def -> TYPE lident 
-- On ARRAY reduce production type_def -> TYPE lident 

State 8:
type_def -> TYPE lident EQ . constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
type_def -> TYPE lident EQ . BAR constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On MIDENT shift to state 9
-- On BAR shift to state 10
-- On mident shift to state 11
-- On constructors shift to state 15

State 9:
mident -> MIDENT . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION TIMES THEN RIGHTPAR RIGHTBR PV PREDICATE PLUS OR NEQ MINUS MIDENT METATRANSITION LT LIDENT LEFTSQ LEFTPAR LE INVARIANT INIT IMP HIDETRANSITION GT GE EQUIV EQ ELSE CONST COMMA COLON BAR ARRAY AND AFFECT ]
-- On VAR reduce production mident -> MIDENT 
-- On UNSAFE reduce production mident -> MIDENT 
-- On UNIVTRANSITION reduce production mident -> MIDENT 
-- On TYPE reduce production mident -> MIDENT 
-- On TREGEXP reduce production mident -> MIDENT 
-- On TRANSITION reduce production mident -> MIDENT 
-- On TIMES reduce production mident -> MIDENT 
-- On THEN reduce production mident -> MIDENT 
-- On RIGHTPAR reduce production mident -> MIDENT 
-- On RIGHTBR reduce production mident -> MIDENT 
-- On PV reduce production mident -> MIDENT 
-- On PREDICATE reduce production mident -> MIDENT 
-- On PLUS reduce production mident -> MIDENT 
-- On OR reduce production mident -> MIDENT 
-- On NEQ reduce production mident -> MIDENT 
-- On MINUS reduce production mident -> MIDENT 
-- On MIDENT reduce production mident -> MIDENT 
-- On METATRANSITION reduce production mident -> MIDENT 
-- On LT reduce production mident -> MIDENT 
-- On LIDENT reduce production mident -> MIDENT 
-- On LEFTSQ reduce production mident -> MIDENT 
-- On LEFTPAR reduce production mident -> MIDENT 
-- On LE reduce production mident -> MIDENT 
-- On INVARIANT reduce production mident -> MIDENT 
-- On INIT reduce production mident -> MIDENT 
-- On IMP reduce production mident -> MIDENT 
-- On HIDETRANSITION reduce production mident -> MIDENT 
-- On GT reduce production mident -> MIDENT 
-- On GE reduce production mident -> MIDENT 
-- On EQUIV reduce production mident -> MIDENT 
-- On EQ reduce production mident -> MIDENT 
-- On ELSE reduce production mident -> MIDENT 
-- On CONST reduce production mident -> MIDENT 
-- On COMMA reduce production mident -> MIDENT 
-- On COLON reduce production mident -> MIDENT 
-- On BAR reduce production mident -> MIDENT 
-- On ARRAY reduce production mident -> MIDENT 
-- On AND reduce production mident -> MIDENT 
-- On AFFECT reduce production mident -> MIDENT 

State 10:
type_def -> TYPE lident EQ BAR . constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On MIDENT shift to state 9
-- On mident shift to state 11
-- On constructors shift to state 14

State 11:
constructors -> mident . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
constructors -> mident . BAR constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On BAR shift to state 12
-- On VAR reduce production constructors -> mident 
-- On UNSAFE reduce production constructors -> mident 
-- On UNIVTRANSITION reduce production constructors -> mident 
-- On TYPE reduce production constructors -> mident 
-- On TREGEXP reduce production constructors -> mident 
-- On TRANSITION reduce production constructors -> mident 
-- On PREDICATE reduce production constructors -> mident 
-- On METATRANSITION reduce production constructors -> mident 
-- On INVARIANT reduce production constructors -> mident 
-- On INIT reduce production constructors -> mident 
-- On HIDETRANSITION reduce production constructors -> mident 
-- On CONST reduce production constructors -> mident 
-- On ARRAY reduce production constructors -> mident 

State 12:
constructors -> mident BAR . constructors [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On MIDENT shift to state 9
-- On mident shift to state 11
-- On constructors shift to state 13

State 13:
constructors -> mident BAR constructors . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On VAR reduce production constructors -> mident BAR constructors 
-- On UNSAFE reduce production constructors -> mident BAR constructors 
-- On UNIVTRANSITION reduce production constructors -> mident BAR constructors 
-- On TYPE reduce production constructors -> mident BAR constructors 
-- On TREGEXP reduce production constructors -> mident BAR constructors 
-- On TRANSITION reduce production constructors -> mident BAR constructors 
-- On PREDICATE reduce production constructors -> mident BAR constructors 
-- On METATRANSITION reduce production constructors -> mident BAR constructors 
-- On INVARIANT reduce production constructors -> mident BAR constructors 
-- On INIT reduce production constructors -> mident BAR constructors 
-- On HIDETRANSITION reduce production constructors -> mident BAR constructors 
-- On CONST reduce production constructors -> mident BAR constructors 
-- On ARRAY reduce production constructors -> mident BAR constructors 

State 14:
type_def -> TYPE lident EQ BAR constructors . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On VAR reduce production type_def -> TYPE lident EQ BAR constructors 
-- On UNSAFE reduce production type_def -> TYPE lident EQ BAR constructors 
-- On UNIVTRANSITION reduce production type_def -> TYPE lident EQ BAR constructors 
-- On TYPE reduce production type_def -> TYPE lident EQ BAR constructors 
-- On TREGEXP reduce production type_def -> TYPE lident EQ BAR constructors 
-- On TRANSITION reduce production type_def -> TYPE lident EQ BAR constructors 
-- On PREDICATE reduce production type_def -> TYPE lident EQ BAR constructors 
-- On METATRANSITION reduce production type_def -> TYPE lident EQ BAR constructors 
-- On INVARIANT reduce production type_def -> TYPE lident EQ BAR constructors 
-- On INIT reduce production type_def -> TYPE lident EQ BAR constructors 
-- On HIDETRANSITION reduce production type_def -> TYPE lident EQ BAR constructors 
-- On CONST reduce production type_def -> TYPE lident EQ BAR constructors 
-- On ARRAY reduce production type_def -> TYPE lident EQ BAR constructors 

State 15:
type_def -> TYPE lident EQ constructors . [ VAR UNSAFE UNIVTRANSITION TYPE TREGEXP TRANSITION PREDICATE METATRANSITION INVARIANT INIT HIDETRANSITION CONST ARRAY ]
-- On VAR reduce production type_def -> TYPE lident EQ constructors 
-- On UNSAFE reduce production type_def -> TYPE lident EQ constructors 
-- On UNIVTRANSITION reduce production type_def -> TYPE lident EQ constructors 
-- On TYPE reduce production type_def -> TYPE lident EQ constructors 
-- On TREGEXP reduce production type_def -> TYPE lident EQ constructors 
-- On TRANSITION reduce production type_def -> TYPE lident EQ constructors 
-- On PREDICATE reduce production type_def -> TYPE lident EQ constructors 
-- On METATRANSITION reduce production type_def -> TYPE lident EQ constructors 
-- On INVARIANT reduce production type_def -> TYPE lident EQ constructors 
-- On INIT reduce production type_def -> TYPE lident EQ constructors 
-- On HIDETRANSITION reduce production type_def -> TYPE lident EQ constructors 
-- On CONST reduce production type_def -> TYPE lident EQ constructors 
-- On ARRAY reduce production type_def -> TYPE lident EQ constructors 
